# ComfyUI-GeneraNodes

./: .gitignore  README.md  __init__.py  batch_previewer.py  batch_tester.py  densepose.py  gcp_storage.py  image_transformer.py  image_transformer_test.py  install.py  mask_drawer.py  pyproject.toml  requirements.txt  utils.py
PainterNode/: painter_node.py
js/: batch_tester.js  mask_drawer.js  mute_all_previews.js
